--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -58,7 +58,7 @@ font-3 = Hack Nerd Font Mono:pixelsize=15;2
 
 modules-left = bspwm i3
 modules-center = xwindow
-modules-right = battery date ethernet htb
+modules-right = battery date ethernet htb igvpn
 
 tray-position = right
 tray-padding = 2
@@ -432,3 +432,8 @@ exec = ~/.config/bin/ethernet_status.sh
 type = custom/script
 interval = 2
 exec = ~/.config/bin/vpnstatus.sh
+
+[module/igvpn]
+type = custom/script
+interval = 2
+exec = ~/.config/bin/igvpn.sh
